Update 'xuywjno1o-go' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-2a5afa8fb1.ltwz.p3.openshiftapps.com/rhtap/rhtap-qe:c2a1a4e1cdd6eea2511887eebe2650d3f2c0072d@sha256:4f48f12feeedb68af44223386b3367cb41fa61a75df9ecdc9a50e203545e205d

--- a/components/xuywjno1o-go/overlays/development/deployment-patch.yaml
+++ b/components/xuywjno1o-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: xuywjno1o-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-2a5afa8fb1.ltwz.p3.openshiftapps.com/rhtap/rhtap-qe:c2a1a4e1cdd6eea2511887eebe2650d3f2c0072d@sha256:4f48f12feeedb68af44223386b3367cb41fa61a75df9ecdc9a50e203545e205d
+          name: container-image
